WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287745
Autoscrolling while selecting text is not very smooth.
https://bugs.webkit.org/show_bug.cgi?id=287745
Summary
Autoscrolling while selecting text is not very smooth.
Megan Gardner
Reported
2025-02-14 18:37:02 PST
Autoscrolling while selecting text is not very smooth.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-14 18:37:14 PST
<
rdar://problem/144900491
>
Megan Gardner
Comment 2
2025-02-14 18:48:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40656
EWS
Comment 3
2025-02-17 12:59:49 PST
Committed
290497@main
(d6d75a4d8ea7): <
https://commits.webkit.org/290497@main
> Reviewed commits have been landed. Closing PR #40656 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug