Autoscrolling while selecting text is not very smooth. https://bugs.webkit.org/show_bug.cgi?id=287745 rdar://144900491

Reviewed by Wenson Hsieh.

The calculations for the offsets to allow selections in the
inset areas where we start selections were incorrect, which
could cause the math to result in a slower than expected scroll.
Also, increase the scroll rate to have a better scrolling experience.

* Source/WebCore/page/ios/EventHandlerIOS.mm:
(WebCore::adjustAutoscrollDestinationForInsetEdges):

Canonical link: https://commits.webkit.org/290497@main